--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "TezBox - Tezos Wallet",
     "short_name": "TezBox",
-    "version": "11.0.0",
+    "version": "12.0.0",
     "manifest_version": 2,
     "author": "https://tezbox.github.io",
     "description": "Secure Tezos Wallet from your browser",
@@ -12,6 +12,7 @@
     "default_locale": "en",
     "background": {
       "scripts": [
+        "skin/js/protobuf.min.js",
         "background.js"
       ]
     },
