--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,9 +1,9 @@
 {
     "name": "TezBox - Tezos Wallet",
     "short_name": "TezBox",
-    "version": "11.0.0",
+    "version": "12.0.0",
     "manifest_version": 2,
-    "author": "https://tezbox.github.io",
+    "author": "https://tezbox.com",
     "description": "Secure Tezos Wallet from your browser",
     "icons": {
         "16": "skin/images/icon-16.png",
