--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
 	"name": "TezBox - Tezos Wallet",
 	"short_name": "TezBox",
-	"version": "13.0.0",
+	"version": "14.0.0",
 	"manifest_version": 2,
 	"author": "https://tezbox.com",
 	"description": "Secure Tezos Wallet from your browser",
@@ -30,7 +30,7 @@
 			"clipboardWrite",
 			"<all_urls>"
 	],
-	"web_accessible_resources": ["skin/images/*", "inject.js"],
+	"web_accessible_resources": ["skin/images/*"],
 	"content_scripts": [
 		{
 			"matches": [
